AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/Geotab_Sync_State__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Runtime feed tokens and session state for Geotab sync.</description>
    <label>Geotab Sync State</label>
</CustomObject>