AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/Active_Config_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Active_Config_Developer_Name__c</fullName>
    <description>DeveloperName of the Geotab_Integration_Config__mdt record used by sync jobs (e.g. Default, UAT, Production).</description>
    <label>Active Config Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>