AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/Device_Feed_Version__c.field-meta.xml
<CustomField>
    <fullName>Device_Feed_Version__c</fullName>
    <label>Device Feed Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>