AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/DeviceStatusInfo_Feed_Version__c.field-meta.xml
<CustomField>
    <fullName>DeviceStatusInfo_Feed_Version__c</fullName>
    <label>Device Status Info Feed Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>