AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/Last_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Message__c</fullName>
    <label>Last Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>