AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/Last_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Status__c</fullName>
    <label>Last Sync Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>