AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/Session_Database__c.field-meta.xml
<CustomField>
    <fullName>Session_Database__c</fullName>
    <label>Session Database</label>
    <length>255</length>
    <type>Text</type>
</CustomField>