AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/Session_Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Session_Expires_At__c</fullName>
    <label>Session Expires At</label>
    <type>DateTime</type>
</CustomField>