AirquipUAT/force-app/main/default/objects/Geotab_Sync_State__c/fields/Session_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_User_Name__c</fullName>
    <label>Session User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>